[package]
name = "dashboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.5.4", package = "gtk4", features = ["v4_6"] }
tokio = "1.23.0"
relm4 = "0.5.0-beta.5"
relm4-components = "0.5.0-beta.5"
rbmini = { git = "https://github.com/transitorykris/rbmini" }