[package]
name = "dashboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.5.4", package = "gtk4", features = ["v4_6"] }
tokio = "1.23.0"
relm4 = "0.5.0-beta.5"
relm4-components = "0.5.0-beta.5"
rbmini = { git = "https://github.com/transitorykris/rbmini" }
logger = { git = "https://github.com/transitorykris/logger" }
hyper = { version = "0.14", features = ["full"] }
geo = "0.23.1"
egui = "0.20.0"
eframe = { version = "0.20.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
